--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <img src= "images/headshot.jpg" width=500 alt= "headshot"/>
 
     <p>
-      My name is Elise Song and I am a second-year Computer Science student at Cornell University in Ithaca, New York. I was born and raised in Portland, Oregon and made my way accross the country to live in another city filled with gorges, waterfalls, and trees. I like to problem solve and design whether it's programming, designing, or sketching.
+      My name is Elise Song and I am a second-year Computer Science student at Cornell University in Ithaca, New York. I was born and raised in Portland, Oregon and made my way accross the country to live in another city filled with gorges, waterfalls, and trees. I like to problem solve and design whether it's programming, styling, or drawing.
     </p>
     <h2 class="center">contact me at eys29@cornell.edu</h2>
   </div>
