--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
       <li><a href="index.html" class="current">home</a></li>
       <li><a href="projects.html">projects</a></li>
+      <li><a href="art.html">art</a></li>
       <li><a href="about.html">about</a></li>
     </ul>
   </nav>
