--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href="index.html">home</a></li>
       <li><a href="projects.html" class="current">projects</a></li>
+      <li><a href="art.html">art</a></li>
       <li><a href="about.html">about</a></li>
     </ul>
   </nav>
