--- a/art.html
+++ b/art.html
@@ -21,8 +21,8 @@
   </div>
   <div class="center-col art">
     <p>medium: digital art</p>
-    <img src= "images/art/cloud.JPG" width=300 alt= "cloud digital drawing"/>
-    <img src= "images/art/sunset.jpg" width=300 alt= "sunset digital drawing"/>
+    <img src= "images/art/cloud.jpg" width=300 alt= "cloud digital drawing"/>
+    <img src= "images/art/sunset.JPG" width=300 alt= "sunset digital drawing"/>
     <p>medium: colored pencil</p>
     <img src= "images/art/orchid.jpg" width=300 alt= "orchid drawing"/>
     <img src= "images/art/orchid1.jpg" width=300 alt= "orchid closeup of flowers"/>
